bin/tests/snapshots/deprecated_to_path__lint_ee5c708f57b9c5c76f68e3a95819563c37b496a3abe9435bfc87d2b730877df3.snap
---
source: bin/tests/deprecated_to_path.rs
---
builtins.toPath x

---
[W17] Warning: Found usage of deprecated builtin toPath
   ╭─[<temp_file_path>:1:1]
   │
 1 │ builtins.toPath x
   · ────────┬────────  
   ·         ╰────────── builtins.toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
